# GameEngine

./: CMakeLists.txt  Doxyfile  Doxysettings.txt  README.md
resources/curuthers/: Whiskers_diffuse.glsl  meshTexShader.glsl
resources/shader/: GUIShader.gsl  fragmentShader.txt  guishader.txt  meshTexShader.txt  vertexShader.txt
src/GameEngine/: .Core.cpp.swp  Camera.cpp  Camera.h  CollisionDetection.cpp  CollisionDetection.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Enviroment.cpp  Enviroment.h  Exception.cpp  Exception.h  FragmentShader.cpp  FragmentShader.h  GUI.cpp  GUI.h  GameEngine.h  Keyboard.cpp  Keyboard.h  Map.h  Material.cpp  Material.h  MaterialAttribute.h  Mesh.cpp  Mesh.h  MeshRender.cpp  MeshRender.h  ModelCollider.cpp  ModelCollider.h  Object.cpp  Object.h  Player.cpp  Player.h  Ray.cpp  Ray.h  RendInc.h  Resource.cpp  (+22 more)
src/rend/: Context.cpp  Context.h  Mesh.cpp  Mesh.h  Resource.h  Shader.cpp  Shader.h  mathutil.h
src/sandbox/: Main.cpp  Player.cpp  Player.h  TestScene.cpp  TestScene.h
